@startuml
skinparam linetype ortho

class Time {
    - String tipo
    + BRANCO: Time
    + PRETO: Time
    + toString(): String
}


class Tabuleiro {
    - Time timeBranco
    - Time timePreto
    + inicializarTimes()
}

class Peca {
    - String nome
    - Time time
}

Time <.. Tabuleiro : usa
Time <.. Peca : usa
@enduml